545-request-timeout/5451/istio-api/virtual-service-ratings-delay.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings-delay
spec:
  hosts:
    - ratings
  http:
    - fault:
        delay:
          percentage:
            value: 100.0
          fixedDelay: 4s
      route:
        - destination:
            host: ratings
            subset: v1
