545-request-timeout/5451/istio-api/virtual-service-ratings.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews-request-timeout
spec:
  hosts:
    - ratings
  http:
    - route:
        - destination:
            host: ratings
            subset: v2
      timeout: 2.5s
