545-request-timeout/5451/istio-api/virtual-service-reviews.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reviews-request-timeout
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v2
        timeout: 2.5s
